--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,5 @@
-Django==3.2.9                 # Replace with the Django version you're using
-gunicorn==20.1.0              # Production WSGI HTTP server
-psycopg2-binary==2.9.1        # PostgreSQL adapter, if using PostgreSQL
-whitenoise==5.3.0             # Simplifies static file serving in production
-djangorestframework==3.12.4   # If using Django REST Framework for APIs
+Django==5.1.3                 # Latest stable release
+gunicorn==21.2.0              # Production WSGI HTTP server
+psycopg==3.1.8                # PostgreSQL adapter
+whitenoise==6.8.2             # Simplifies static file serving in production
+djangorestframework==3.15.0   # For building Web APIs
