--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # System files
-**/.DS_Store
+.DS_Store
 Thumbs.db
 desktop.ini
 
@@ -10,7 +10,7 @@ desktop.ini
 *.swo
 
 # Python
-**/__pycache__/
+__pycache__/
 *.pyc
 *.pyo
 *.pyd
