--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,3 +4,4 @@ psycopg==3.1.8                # PostgreSQL adapter
 whitenoise==6.8.2             # Simplifies static file serving in production
 djangorestframework==3.15.0   # For building Web APIs
 python-dotenv
+whitenoise[brotli]==6.8.2
